Added team background image the preloader

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,6 +15,7 @@
 <div id="preloader">
     <%= image_tag "thumbs-up.png", :class => "hide" %>
     <%= image_tag "thumbs-down.png", :class => "hide" %>
+    <%= image_tag "team.jpg", :class => "hide" %>
 </div>
 <div id="edit" style="display:none;"></div>
 <%= render :partial => "users/game/win" %>
