--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -58,9 +58,18 @@ body.users-edit{
     max-width: 340px;
     max-height: 340px;
 }
+.avatar-wrapper{
+    width:40px;
+    height:40px;
+    margin-right:15px;
+    float:left;
+}
 img.avatar{
    max-width:40px;
    max-height:40px; 
+}
+#win table.highscore p{
+    line-height:40px;
 }
 .index-photos{
     margin: 20px 0 0 20px;
@@ -238,7 +247,7 @@ input#user_submit{
     margin-bottom:0;
 }
 #win .score{
-    background:rgba(200, 70, 40, .9);
+    background:rgba(200, 70, 40, .75);
     padding:10px 30px;
     margin-top:10px;
     color:#000;
