Made the preloaded hidden due to firefox preloader issues

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,9 +13,9 @@
     <%= render :partial => "users/game/names_sidebar" %>
 </div>
 <div id="preloader">
-    <%= image_tag "thumbs-up.png", :class => "hide" %>
-    <%= image_tag "thumbs-down.png", :class => "hide" %>
-    <%= image_tag "team.jpg", :class => "hide" %>
+    <%= image_tag "thumbs-up.png" %>
+    <%= image_tag "thumbs-down.png" %>
+    <%= image_tag "team.jpg" %>
 </div>
 <div id="edit" style="display:none;"></div>
 <%= render :partial => "users/game/win" %>
