--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -90,7 +90,7 @@ img.avatar{
     float:right;
     clear:both;
     padding-top: 25px;
-    height: 40px;
+    height:20px;
     width:180px;
     background: url(/images/mynewsdesk.png) no-repeat 0 0;
     text-align: right;
@@ -116,6 +116,8 @@ img.avatar{
 }
 .ui-draggable-dragging{
     box-shadow: 0 0 10px #000;
+    position:absolute;
+    z-index:9001;
 }
 .incorrect,
 .correct{
@@ -141,13 +143,27 @@ img.avatar{
     visibility:hidden;
     overflow:hidden;
 }
-
 #warning{
     background:#DD3920;
     width:100%;
     text-align:center;
     font-weight:bold;
     padding-left:20px;
+}
+.highscore-photo-warning{
+    font-size:16px;
+    margin:10px 0;
+}
+#names-wrapper{
+    height:100%;
+    width:100%;
+    overflow-y:auto;
+    margin-top:10px;
+}
+.show-highscore{
+    position:absolute;
+    bottom:25px;
+    right:50px;
 }
 #edit{
     position: absolute;
