--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -185,14 +185,18 @@ img.avatar{
     clear:left;
 }
 .row .field{
-    width: 260px;
+
     float:left;
 }
-#edit input[type=text]{
-    width:250px;
-    padding:5px;
-    -webkit-border-radius:4px;
-    border:1px solid #666;
+.label-wrapper{
+    display: inline-block;
+    width:80px;
+    font-weight:bold;
+}
+.row input[type=text]{
+    width:200px;
+    padding:2px;
+    font-size:12px;
 }
 #edit input[type=text]:focus{
     border-color: #7DCDEF;
